--- a/clinic/pom.xml
+++ b/clinic/pom.xml
@@ -14,9 +14,7 @@
     <name>clinic</name>
     <description>clinic</description>
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>17</java.version>
     </properties>
     <dependencies>
         <dependency>
