--- a/frontClient/front-client/package.json
+++ b/frontClient/front-client/package.json
@@ -18,6 +18,7 @@
     "mdb-react-ui-kit": "^7.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.0",
